testdata/baselines/reference/submodule/conformance/typedefTagNested.errors.txt
a.js(9,12): error TS2304: Cannot find name 'App'.
a.js(26,12): error TS2304: Cannot find name 'Opp'.
a.js(35,12): error TS2304: Cannot find name 'Upp'.


==== a.js (3 errors) ====
    /** @typedef {Object} App
     * @property {string} name
     * @property {Object} icons
     * @property {string} icons.image32
     * @property {string} icons.image64
     */
    var ex;
    
    /** @type {App} */
               ~~~
!!! error TS2304: Cannot find name 'App'.
    const app = {
        name: 'name',
        icons: {
            image32: 'x.png',
            image64: 'y.png',
        }
    }
    
    /** @typedef {Object} Opp
     * @property {string} name
     * @property {Object} oops
     * @property {string} horrible
     * @type {string} idea
     */
    var intercessor = 1
    
    /** @type {Opp} */
               ~~~
!!! error TS2304: Cannot find name 'Opp'.
    var mistake;
    
    /** @typedef {Object} Upp
     * @property {string} name
     * @property {Object} not
     * @property {string} nested
     */
    
    /** @type {Upp} */
               ~~~
!!! error TS2304: Cannot find name 'Upp'.
    var sala = { name: 'uppsala', not: 0, nested: "ok" };
    sala.name
    sala.not
    sala.nested
    